# jarvis

./: README.md  build.sh  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  main.py  vercel.json
config/: settings.yaml
core/: brain.py  executor.py
daemon/: pyproject.toml
daemon/src/jarvis/: __init__.py  agent.py  cli.py  config.py  main.py  memory.py  router.py  video.py
daemon/src/jarvis/voice/: __init__.py  stt.py  tts.py  wake.py
interfaces/: cli.py  voice.py
memory/: vector_store.py
modules/: audio.nix  jarvis.nix
web/: index.html
