[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "jarvis-daemon"
version         = "0.1.0"
description     = "JARVIS — Personal AI Operating System Daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "ollama>=0.4",
    "chromadb>=0.5",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiofiles>=24.1",
    "httpx>=0.27",
    "rich>=13.9",
    "typer>=0.13",
    "psutil>=6.1",
    "sounddevice>=0.5",
    "numpy>=2.1",
    "websockets>=13.0",
    "openai-whisper>=20240930",  # fallback; prefer whisper.cpp binary
]

[project.scripts]
jarvis = "jarvis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py311"
